--- a/xd-spring-boot-web-starter/pom.xml
+++ b/xd-spring-boot-web-starter/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>xd-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
