--- a/xd-spring-boot-redis-starter/pom.xml
+++ b/xd-spring-boot-redis-starter/pom.xml
@@ -15,6 +15,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.xd</groupId>
+            <artifactId>xd-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
