--- a/pom.xml
+++ b/pom.xml
@@ -10,18 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.xd</groupId>
-    <artifactId>xd-spring-boot-starter</artifactId>
+    <artifactId>kerns-spring-boot-starter</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
-        <module>xd-spring-boot-web-starter</module>
-        <module>xd-spring-boot-amqp-starter</module>
-        <module>xd-spring-boot-redis-starter</module>
-        <module>xd-spring-boot-jpa-starter</module>
-        <module>xd-spring-boot-swagger-starter</module>
-        <module>xd-spring-boot-system-starter</module>
-        <module>xd-spring-boot-mongodb-starter</module>
-        <module>xd-spring-boot-elasticsearch-starter</module>
+        <module>kerns-spring-boot-swagger-starter</module>
     </modules>
     <dependencies>
         <dependency>
