--- a/kerns-spring-boot-swagger-starter/pom.xml
+++ b/kerns-spring-boot-swagger-starter/pom.xml
@@ -3,19 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>xd-spring-boot-starter</artifactId>
-        <groupId>com.xd</groupId>
+        <artifactId>kerns-spring-boot-starter</artifactId>
+        <groupId>io.kerns</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>xd-spring-boot-swagger-starter</artifactId>
+    <artifactId>kerns-spring-boot-swagger-starter</artifactId>
+    <properties>
+        <swagger.version>2.9.2</swagger.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.10</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -35,10 +35,12 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.5</version>
         </dependency>
     </dependencies>
 
