--- a/pom.xml
+++ b/pom.xml
@@ -9,23 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.kerns</groupId>
-    <artifactId>kerns-spring-boot-starter</artifactId>
+    <groupId>io.kerns.spring</groupId>
+    <artifactId>kerns-spring</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
-        <module>kerns-spring-boot-swagger-starter</module>
-        <module>kerns-spring-boot-web-starter</module>
+        <module>kerns-spring-boot-starter</module>
     </modules>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
