--- a/kerns-spring-boot-starter/pom.xml
+++ b/kerns-spring-boot-starter/pom.xml
@@ -9,13 +9,14 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>io.kerns.spring</groupId>
-    <artifactId>kerns-spring-boots-starter</artifactId>
+    <artifactId>kerns-spring-boot-starter</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>kerns-spring-boot-swagger-starter</module>
         <module>kerns-spring-boot-web-starter</module>
         <module>kerns-spring-boot-mongo-starter</module>
+        <module>kerns-spring-boot-uid-starter</module>
     </modules>
     <dependencies>
         <dependency>
