--- a/kerns-spring-boot-starter/pom.xml
+++ b/kerns-spring-boot-starter/pom.xml
@@ -17,6 +17,7 @@
         <module>kerns-spring-boot-web-starter</module>
         <module>kerns-spring-boot-mongo-starter</module>
         <module>kerns-spring-boot-uid-starter</module>
+        <module>kerns-spring-boot-redis-starter</module>
     </modules>
     <dependencies>
         <dependency>
